# regstat

./: regstat.cabal
exe/: regstat.hs
lib/Application/RegisterStatus/: Command.hs  Job.hs  ProgType.hs
template/: synergy.conf.st
