Name:		regstat
Version:	0.0
Synopsis:	
Description: 	
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     template/*.conf.st


Executable regstat
  Main-is: regstat.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, regstat

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, 
                   split, 
                   text, 
                   aeson >= 0.6, 
                   unordered-containers,
                   transformers >= 0.3, 
                   HStringTemplate,
                   HStringTemplateHelpersIW, 
                   configurator,
                   kvstore-client,
                   http-types,
                   process
  Exposed-Modules: 
                   Application.RegisterStatus.ProgType
                   Application.RegisterStatus.Job
                   Application.RegisterStatus.Command
  Other-Modules: 
                   Paths_regstat
 
		 